# churn_prediction

./: .gitignore  README.md  exploration.py  inference.py  modeling.py  processing.py  pyproject.toml  register_model.py
artifacts/: num_cols.pkl  scaler.pkl  selected_columns.pkl
